tests/build/fail/widget_new/missing_value4.stderr
error: expected property value
 --> $DIR/missing_value4.rs:6:16
  |
6 |         cursor =
  |                ^

error[E0433]: failed to resolve: could not find `code_gen` in `drag_move`
 --> $DIR/missing_value4.rs:9:9
  |
9 |         drag_move = true;
  |         ^^^^^^^^^ could not find `code_gen` in `drag_move`

warning: unused imports: `cursor`, `margin`
 --> $DIR/missing_value4.rs:1:27
  |
1 | use zero_ui::properties::{cursor, drag_move, margin};
  |                           ^^^^^^             ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
